tests/test_assets/semantic/valid/arrays/assignment.cog
array_assignment_ok::() -> void {
    values: i32[3] = [0, 0, 0];
    values = [1, 2, 3];
}